# webshell-entropy

./: .gitignore  CMS-EDA.ipynb  README.md  Webshell-EDA.ipynb  Webshell-Predictions.ipynb  calculate_entropy.sh  joomla.csv  pyproject.toml  setup.sh  webshell.csv  webshell.php  wordpress.csv
